--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,15 @@ license = "MIT OR Apache-2.0"
 
 [[bin]]
 name = "eternal-os"
+path = "src/main.rs"
 test = false
 bench = false
 
 [dependencies]
-panic-halt = "0.2.0"
 ufmt = "0.1.0"
 nb = "0.1.2"
 embedded-hal = "0.2.3"
+mpu6050 = {path = "mpu6050"}
 
 [dependencies.arduino-hal]
 git = "https://github.com/rahix/avr-hal"
