--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ ufmt = "0.1.0"
 nb = "0.1.2"
 embedded-hal = "0.2.3"
 mpu6050 = {path = "mpu6050"}
+pid = {path = "pid"}
 
 [dependencies.arduino-hal]
 git = "https://github.com/rahix/avr-hal"
