Added system package framework

--- a/system/Cargo.toml
+++ b/system/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mpu6050"
+name = "system"
 version = "0.1.0"
 authors = ["Joseph Hobbs <josephrosshobbs@gmail.com>"]
 edition = "2018"
@@ -7,5 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-embedded-hal = "0.2.3"
-math = {path = "../math"}
