--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ bench = false
 ufmt = "0.1.0"
 nb = "0.1.2"
 embedded-hal = "0.2.3"
-mpu6050 = {path = "mpu6050"}
+mpu6050 = {path = "drivers/mpu6050"}
 pid = {path = "pid"}
 remote-id = {path = "remote-id"}
 
