--- a/drivers/mpu6050/Cargo.toml
+++ b/drivers/mpu6050/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "remote-id"
+name = "mpu6050"
 version = "0.1.0"
 authors = ["Joseph Hobbs <josephrosshobbs@gmail.com>"]
 edition = "2018"
@@ -7,4 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-system = {path = "../system"}
+embedded-hal = "0.2.3"
+math = {path = "../../math"}
