--- a/drivers/Cargo.toml
+++ b/drivers/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mpu6050"
+name = "drivers"
 version = "0.1.0"
 authors = ["Joseph Hobbs <josephrosshobbs@gmail.com>"]
 edition = "2018"
@@ -8,4 +8,4 @@ edition = "2018"
 
 [dependencies]
 embedded-hal = "0.2.3"
-math = {path = "../../math"}
+math = {path = "../math"}
