--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ system = {path = "system"}
 [dependencies.arduino-hal]
 git = "https://github.com/rahix/avr-hal"
 rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
-features = ["arduino-uno"]
+features = ["arduino-mega2560"]
 
 # Configure the build for minimal size - AVRs have very little program memory
 [profile.dev]
