--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,7 +2,7 @@
 target = "avr-specs/avr-atmega2560.json"
 
 [target.'cfg(target_arch = "avr")']
-runner = "ravedude uno -cb 57600"
+runner = "ravedude mega -cb 57600"
 
 [unstable]
 build-std = ["core"]
