--- a/drivers/Cargo.toml
+++ b/drivers/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2018"
 [dependencies]
 embedded-hal = "0.2.3"
 math = {path = "../math"}
-bitvec = {path = "../bitvec"}
+vec = {path = "../vec"}
