--- a/vec/Cargo.toml
+++ b/vec/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bitvec"
+name = "vec"
 version = "0.1.0"
 authors = ["Joseph Hobbs <josephrosshobbs@gmail.com>"]
 edition = "2018"
