--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,8 @@ bench = false
 ufmt = "0.1.0"
 nb = "0.1.2"
 embedded-hal = "0.2.3"
-drivers = {path = "drivers"}
 pid = {path = "pid"}
-remote-id = {path = "remote-id"}
+api = {path = "api"}
 system = {path = "system"}
 
 [dependencies.arduino-hal]
