--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ sys = {path = "sys"}
 
 [dependencies.arduino-hal]
 git = "https://github.com/rahix/avr-hal"
-rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
-features = ["arduino-mega2560"]
+rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
+features = ["arduino-uno"]
 
 # Configure the build for minimal size - AVRs have very little program memory
 [profile.dev]
