--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,6 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-math = {path = "../math"}
-sys = {path = "../sys"}
 embedded-hal = "0.2.3"
+
+[dependencies.math]
+path = "../math"
+
+[dependencies.sys]
+path = "../sys"
+
+[dependencies.embedded-nrf24l01]
+path = "./src/rf"
